fix: use daemon threads for fixed thread pool to prevent JVM exit hang
When --parallelism N is set, newFixedThreadPool creates non-daemon
platform threads. If a thread is stuck in ANTLR after shutdownNow(),
it prevents JVM exit. Using daemon thread factory ensures stuck threads
don't block process termination.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>